added pending doc number

--- a/er/er.html
+++ b/er/er.html
@@ -23,10 +23,10 @@
 <p>Approval Date: YYYY-MM-DD</p>
 </div>
 <div class="paragraph">
-<p>Posted Date: YYYY-MM-DD</p>
+<p>Posted Date: 2018-11-21</p>
 </div>
 <div class="paragraph">
-<p>Reference number of this document: OGC XX-XXX</p>
+<p>Reference number of this document: OGC 18-097</p>
 </div>
 <div class="paragraph">
 <p>Reference URL for this document: <a href="http://www.opengis.net/doc/PER/elfie-ID" class="bare">http://www.opengis.net/doc/PER/elfie-ID</a></p>
@@ -35,7 +35,7 @@
 <p>Category: Public Engineering Report</p>
 </div>
 <div class="paragraph">
-<p>Editor: David Blodgett</p>
+<p>Editor: David Blodgett, Byron Cochrane, Rob Atkinson, Silvain Grellet, Abdel Feliachi</p>
 </div>
 <div class="paragraph">
 <p>Title: OGC Environmental Linked Features Interoperability Experiment Engineering Report</p>
@@ -2340,7 +2340,7 @@ groundwater so they can understand and forecast groundwater availability.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-10-09 09:46:00 -0500
+Last updated 2018-11-21 08:16:49 -0600
 </div>
 </div>
 </body>
