--- a/er/er.html
+++ b/er/er.html
@@ -35,7 +35,7 @@
 <p>Category: Public Engineering Report</p>
 </div>
 <div class="paragraph">
-<p>Editor: David Blodgett, Byron Cochrane, Rob Atkinson, Silvain Grellet, Abdel Feliachi</p>
+<p>Editor: David Blodgett, Byron Cochrane, Rob Atkinson, Silvain Grellet, Abdel Feliachi, Alistair Ritchie</p>
 </div>
 <div class="paragraph">
 <p>Title: OGC Environmental Linked Features Interoperability Experiment Engineering Report</p>
@@ -2340,7 +2340,7 @@ groundwater so they can understand and forecast groundwater availability.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-11-21 08:16:49 -0600
+Last updated 2018-11-23 06:02:33 -0600
 </div>
 </div>
 </body>
